# wiki-game-benchmark

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
scripts/: build_index.py  invoke-server.sh  upload_to_r2.sh
src/: clients.py  eval.py  models.py  signatures.py  utils.py  wiki_db.py
src/api/: README.md  app.py  models.py  utils.py  worker.py
test/: test_api_utils.py  test_clients_integration.py  test_eval.py  test_server_integration.py  test_wiki_db.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/: 404.html
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: GamePlay.tsx  GameStart.tsx
wiki-game-demo/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
wiki-game-demo/src/: index.css  main.tsx
wiki-game-demo/src/lib/: api.ts
wiki-game-demo/src/pages/: Game.tsx  Landing.tsx
