[project]
name = "wiki-game-benchmark"
version = "0.1.0"
description = "Benchmarks and Optimization for LLMs playing the Wikipedia Game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dspy", "pydantic", "python-dotenv", "pandas", "wikiextractor"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
